--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.3
+  provider: ^4.0.3
+  firebase_database: ^3.1.1
+  shared_preferences: ^0.5.6+1
 
 dev_dependencies:
   flutter_test:
