--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,18 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   intl: ^0.16.1
   cupertino_icons: ^0.1.3
-  provider: ^4.0.3
+  provider: ^4.0.4
 #  firebase_database: ^3.1.1
-  shared_preferences: ^0.5.6+1
+  shared_preferences: ^0.5.6+2
   syncfusion_flutter_charts: ^17.4.46
+  animations: ^1.0.0+5
+  path_provider: ^1.6.1
+  shimmer: ^1.0.1
+
+
 
 dev_dependencies:
+  pedantic: ^1.8.0+1
   flutter_test:
     sdk: flutter
 
