--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,10 @@ dependencies:
   provider: ^4.0.4
 #  firebase_database: ^3.1.1
   shared_preferences: ^0.5.6+2
-  syncfusion_flutter_charts: ^17.4.43
   animations: ^1.0.0+5
   path_provider: ^1.6.1
   shimmer: ^1.0.1
+  url_launcher: ^5.4.2
 
 
 
