--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   intl: ^0.16.1
   cupertino_icons: ^0.1.3
   provider: ^4.0.4
-#  firebase_database: ^3.1.1
+  #  firebase_database: ^3.1.1
   shared_preferences: ^0.5.6+2
   animations: ^1.0.0+5
   path_provider: ^1.6.1
@@ -35,9 +35,19 @@ dependencies:
 
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.7.3"
   pedantic: ^1.8.0+1
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  #  image_path: "assets/images/icon-128x128.png"
+  image_path_android: "assets/images/icon.png"
+  image_path_ios: "assets/images/icon.png"
+  android: "ic_launcher" #true # can specify file name here e.g. "ic_launcher"
+  ios: "ic_launcher" #true # can specify file name here e.g. "My-Launcher-Icon"
+  #adaptive_icon_background: "assets/images/christmas-background.png" # only available for Android 8.0 devices and above
+  #adaptive_icon_foreground: "assets/images/icon-foreground-432x432.png" # only available for Android 8.0 devices and above
 
 
 # For information on the generic Dart part of this file, see the
