--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shimmer: ^1.0.1
   url_launcher: ^5.4.2
   flutter_local_notifications: ^1.2.0+3
+  android_intent: ^0.3.5+1
 
 
 
