--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter application.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.2+7
+version: 1.0.2+8
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -31,7 +31,7 @@ dependencies:
   path_provider: ^1.6.1
   shimmer: ^1.0.1
   url_launcher: ^5.4.2
-  flutter_local_notifications: ^1.2.0+3
+  flutter_local_notifications: ^1.2.1
   android_intent: ^0.3.5+1
   logger: ^0.8.3
 
