--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.2+8
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -25,6 +25,7 @@ dependencies:
   intl: ^0.16.1
   cupertino_icons: ^0.1.3
   provider: ^4.0.4
+#  provider: ^4.1.0-dev+2
   #  firebase_database: ^3.1.1
   shared_preferences: ^0.5.6+2
   animations: ^1.0.0+5
@@ -34,6 +35,7 @@ dependencies:
   flutter_local_notifications: ^1.2.1
   android_intent: ^0.3.5+1
   logger: ^0.8.3
+  code_faster: ^0.1.2+2
 
 
 
