--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: build and test app
 jobs:
   setup:
     name: install dependencies
-    runs-on: self-hosted
+    runs-on: macOS-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v1
