--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,23 +24,22 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   intl: ^0.16.1
   cupertino_icons: ^0.1.3
-  provider: ^4.0.4
-#  provider: ^4.1.0-dev+2
+  provider: ^4.1.2
   #  firebase_database: ^3.1.1
-  shared_preferences: ^0.5.6+2
+  shared_preferences: ^0.5.7+2
   animations: ^1.0.0+5
-  path_provider: ^1.6.1
-  shimmer: ^1.0.1
-  url_launcher: ^5.4.2
-  flutter_local_notifications: ^1.2.1
-  android_intent: ^0.3.5+1
-  logger: ^0.8.3
-  code_faster: ^0.1.2+2
+  path_provider: ^1.6.8
+  shimmer: ^1.1.1
+  url_launcher: ^5.4.7
+  flutter_local_notifications: ^1.4.3
+  android_intent: ^0.3.7+2
+  logger: ^0.9.1
+  code_faster: ^0.1.3+1
 
 
 
 dev_dependencies:
-  flutter_launcher_icons: "^0.7.3"
+  flutter_launcher_icons: ^0.7.5
   pedantic: ^1.8.0+1
   flutter_test:
     sdk: flutter
@@ -53,35 +52,13 @@ flutter_icons:
   ios: "ic_launcher" #true # can specify file name here e.g. "My-Launcher-Icon"
   #adaptive_icon_background: "assets/images/christmas-background.png" # only available for Android 8.0 devices and above
   #adaptive_icon_foreground: "assets/images/icon-foreground-432x432.png" # only available for Android 8.0 devices and above
-
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   # fonts:
   #   - family: Schyler
   #     fonts:
@@ -93,6 +70,3 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
