--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,21 +24,28 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   intl: ^0.16.1
   cupertino_icons: ^0.1.3
-  provider: ^4.1.2
+  # For state management
+  state_notifier: ^0.5.0
+  flutter_state_notifier: ^0.4.2
+  provider: ^4.1.3
+  # For freezed object
+  freezed_annotation: ^0.11.0
   #  firebase_database: ^3.1.1
-  shared_preferences: ^0.5.7+2
-  animations: ^1.0.0+5
-  path_provider: ^1.6.8
-  url_launcher: ^5.4.7
-  flutter_local_notifications: ^1.4.3
+  shared_preferences: ^0.5.7+3
+  animations: ^1.1.0
+  path_provider: ^1.6.10
+  url_launcher: ^5.4.10
+  flutter_local_notifications: ^1.4.4+1
   android_intent: ^0.3.7+2
   logger: ^0.9.1
-  code_faster: ^0.1.3+1
+  lazy_code: ^0.1.1+1
 
 
 
 dev_dependencies:
   flutter_launcher_icons: ^0.7.5
+  build_runner: ^1.10.0
+  freezed: ^0.11.0
 #  pedantic: ^1.8.0+1
   flutter_test:
     sdk: flutter
