--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,14 @@ dependencies:
   android_intent: ^0.3.7+2
   logger: ^0.9.1
   lazy_code: ^0.1.1+1
+  json_annotation: ^3.0.1
 
 
 
 dev_dependencies:
   flutter_launcher_icons: ^0.7.5
   build_runner: ^1.10.0
+  json_serializable: ^3.3.0
   freezed: ^0.11.0
 #  pedantic: ^1.8.0+1
   flutter_test:
